# taep

./: README.rst  bruder.py  pyproject.toml  svg_util.py
bruder/: __init__.py  __main__.py  svg_util.py
taep/: __init__.py  __main__.py
